minor updates to slides

--- a/_imsb/DESCRIPTION
+++ b/_imsb/DESCRIPTION
@@ -1,12 +1,12 @@
 Package: imsb
 Title: Helper package for the IMSB course
-Version: 0.0.1
-Date: 2022-11-16
+Version: 0.0.2
+Date: 2026-11-10
 Authors@R:
     person(
     given = "Ladislas", family = "Nalborczyk",
     role = c("aut", "cre"),
-    email = "ladislas.nalborczyk@gmail.com", 
+    email = "ladislas.nalborczyk@cnrs.fr", 
     comment = c(ORCID = "0000-0002-7419-9855")
     )
 Description: Provides the materials (packages, utility functions, and data) for the IMSB course.
@@ -14,8 +14,8 @@ License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.2
-URL: https://github.com/lnalborczyk/IMSB2022
-BugReports: https://github.com/lnalborczyk/IMSB2022/issues
+URL: https://github.com/lnalborczyk/IMSB2026
+BugReports: https://github.com/lnalborczyk/IMSB2026/issues
 Imports:
     bayestestR,
     brms,
@@ -30,5 +30,5 @@ Imports:
     tidyr,
     rlang,
     modelr
-Depends: R (>= 4.0)
+Depends: R (>= 4.5)
 LazyData: true
