--- a/_quarto.yml
+++ b/_quarto.yml
@@ -60,10 +60,8 @@ website:
               
   page-footer:
     left: |
-      Content {{< fa brands creative-commons >}} 2026 by [Ladislas Nalborczyk](https://www.barelysignificant.com), adapted from [this course](https://evalf22.classes.andrewheiss.com) by [Andrew Heiss](https://www.andrewheiss.com).<br>
-      All content licensed under a {{< fa brands creative-commons >}}
-      {{< fa brands creative-commons-by >}} {{< fa brands creative-commons-nc >}}
-      [Creative Commons Attribution-NonCommercial 4.0 International license (CC BY-NC 4.0)](https://creativecommons.org/licenses/by-nc/4.0/).
+      Content {{< fa brands creative-commons >}} 2026 by [Ladislas Nalborczyk](https://www.barelysignificant.com).<br>
+      Adapted from [this course](https://evalf22.classes.andrewheiss.com) by [Andrew Heiss](https://www.andrewheiss.com).
     right: |
       Made with {{< fa brands r-project >}} and [Quarto](https://quarto.org/)<br>
       [View the source at {{< fa brands github >}} GitHub](https://github.com/lnalborczyk/IMSB2026)
